--- a/config/database.yml
+++ b/config/database.yml
@@ -55,6 +55,6 @@ production:
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  url: postgres://postgres:password@127.0.0.1/baukis-kai_production
-  port: 5432
+  url: <%= ENV['DATABASE_URL'] %>
+  port: <%= ENV['PORT'] %>
 
