--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@ default: &default
   pool: 5
   username: root
   password: password
-  host: 127.0.0.1
+  host: <%= ENV.fetch("MYSQL_HOST", "127.0.0.1") %>
 
 development:
   <<: *default
