chore:開発コンテナ修正

--- a/Dockerfile-app
+++ b/Dockerfile-app
@@ -8,4 +8,4 @@ RUN ~/.rbenv/shims/bundle install
 
 COPY . /srv
 
-SHELL ["/bin/bash", "-c"]
+CMD ["bash", "-c", "bundle exec rake assets:precompile && bundle exec rake db:migrate && bundle exec rails server -b 0.0.0.0"]
