--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   app:
     build:
       context: .
+      dockerfile: Dockerfile-app
     depends_on:
       - db
     environment:
@@ -16,7 +17,7 @@ services:
     volumes:
       - ./:/app
   db:
-    image: mysql:5.7
+    image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_USER: user
@@ -42,6 +43,8 @@ services:
     depends_on:
       - db
     stdin_open: true
+    ports:
+      - "3333:3000"
 
 volumes:
   mysql-db:
