--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,8 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.7/en/old-client.html
 #
-default: &default
+
+development:
   adapter: mysql2
   encoding: utf8
   collation: utf8_general_ci
@@ -17,16 +18,19 @@ default: &default
   username: root
   password: password
   host: <%= ENV.fetch("MYSQL_HOST", "127.0.0.1") %>
-
-development:
-  <<: *default
   database: baukis-kai_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  adapter: mysql2
+  encoding: utf8
+  collation: utf8_general_ci
+  pool: 5
+  username: root
+  password: password
+  host: <%= ENV.fetch("MYSQL_HOST", "127.0.0.1") %>
   database: baukis-kai_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
