chore:E2Eセットアップ

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,6 +36,9 @@ jobs:
           bundle exec rake db:create RAILS_ENV=test
           bundle exec rake db:migrate RAILS_ENV=test
 
+      - uses: browser-actions/setup-chrome@latest
+      - run: chrome --version
+
       - name: Run tests
         env:
           RAILS_ENV: test
