--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - run: pip install mkdocs-material
+      - run: pip install mkdocs-material pymdown-extensions plantuml-markdown
       - run: mkdocs gh-deploy --force
