--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -3,10 +3,17 @@ name: Documentation Deployment
 on:
   push:
     branches:
-      - master
+      - master develop
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
+    services:
+      plantuml:
+        image: plantuml/plantuml-server:jetty
+        ports:
+          - "8080:8080"
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
