fix:mkdocsセットアップ

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,7 @@ services:
     volumes:
       - ./docs:/docs/docs
       - ./README.md:/docs/README.md
+      - ./mkdocs.yml:/docs/mkdocs.yml
     ports:
       - "8000:8000"
     command: mkdocs serve --dev-addr=0.0.0.0:8000
